--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,13 +3,15 @@
     width: 100px;
     height: 100px;
     background-color: #D9AC84;
-    border: 2px solid #BF5D39;
+    border: 4px solid #BF5D39;
     color: white;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: border 1s;
 }
+
 body {
     background-color: #D9AC84;
 }
