--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,14 +13,69 @@
 
 body {
     background-color: #D9AC84;
+    margin: 0;
 }
 
 .wrapper1 {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #logo {
     width: 300px;
     height: 200px;
+}
+
+#start_button {
+    width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #A66946;
+}
+
+.wrapper2 {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.option_containers {
+    width: 300px;
+    height: 80px;
+    background-color: #D9AC84;
+    border: 2px solid #A66946;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#boil_button {
+    width: 100px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #A66946;
+}
+
+.inner_container {
+
+    width: 100%;
+    gap: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.option_buttons {
+    width: auto;
+    height: 25px;
 }
