--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,17 +1,33 @@
-#try{
+#circleContainer{
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: #D9AC84;
-    border: 4px solid #BF5D39;
-    color: white;
+    width: 200px;
+    height: 200px;
+    background-color: white;
+position: absolute;
+    color: black;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: border 1s;
+    overflow: hidden;
+    z-index: 1;
 }
 
 body {
     background-color: #D9AC84;
 }
+/*
+#circleContainer:hover .semicircle:nth-child(1){
+    transform: rotate(180deg);
+    transition: 1s linear;
+}
+#circleContainer:hover .semicircle:nth-child(2){
+    transform: rotate(360deg);
+    transition: 2s linear;
+}
+#circleContainer:hover .semicircle:nth-child(3){
+    opacity: 0;
+    transition: opacity 0s 1s;
+}
+
+*/
