--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 #circleContainer {
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     background-color: #D9AC84;
     border: 10px solid #BF5D39;
     ;
@@ -116,7 +116,7 @@ body {
 }
 
 img {
-    width: auto;
+    width: 45%;
 
 }
 
@@ -144,6 +144,13 @@ img {
     border: 0px;
     color: #D9AC84;
 }
+#cook_button:hover{
+    cursor: pointer;
+    background-color: #C46F50;
+}
+#circleContainer{
+
+}
 
 @keyframes fade {
     from {
@@ -164,5 +171,5 @@ img {
 #circleContainer,
 #egg,
 #cook_button {
-    animation: fade 2s ease forwards;
+    animation: fade 1s ease forwards;
 }
