--- a/CSS/index.css
+++ b/CSS/index.css
@@ -73,7 +73,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    padding: 5px;
+    gap: 10px;
 }
 
 #boil_button {
@@ -144,7 +145,8 @@ img {
     border: 0px;
     color: #D9AC84;
 }
-#cook_button:hover{
+
+#cook_button:hover {
     cursor: pointer;
     background-color: #C46F50;
 }
@@ -173,22 +175,60 @@ img {
 
 @keyframes wiggle {
     0% {
-      transform: translateX(0);
+        transform: translateX(0);
     }
+
     25% {
-      transform: translateX(-5px);
+        transform: translateX(-5px);
     }
+
     50% {
-      transform: translateX(5px);
+        transform: translateX(5px);
     }
+
     75% {
-      transform: translateX(-5px);
+        transform: translateX(-5px);
     }
+
     100% {
-      transform: translateX(5px);
+        transform: translateX(5px);
     }
-  }
-  
-  .wiggle {
+}
+
+.wiggle {
     animation: wiggle 0.5s ease infinite;
-  }
+}
+
+
+#info {
+    width: 30px;
+    height: 30px;
+    border: 3px solid #BF5D39;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #BF5D39;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.popup {
+    background: #BF5D39;
+    width: 223px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 15px 0 15px 15px;
+    z-index: 100;
+    position: absolute;
+    top: 60px;
+    color: #D9AC84;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
