--- a/CSS/index.css
+++ b/CSS/index.css
@@ -167,7 +167,7 @@ img {
 
 }
 
-.countDownPage{
+.countDownPage {
     animation: fade 1s ease forwards;
 }
 
@@ -212,6 +212,7 @@ img {
     top: 20px;
     right: 20px;
     cursor: pointer;
+
 }
 
 .popup {
@@ -229,4 +230,5 @@ img {
     color: #D9AC84;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    border: 1px solid black;
 }
